[gd_scene load_steps=6 format=3 uid="uid://r3q40pxjpfhq"]

[ext_resource type="Script" uid="uid://ryns7ki21prh" path="res://Scripts/background_music.gd" id="1_pigtt"]
[ext_resource type="AudioStream" uid="uid://r5mex4d0xef3" path="res://Sounds/tutorial.mp3" id="2_hb7aa"]
[ext_resource type="AudioStream" uid="uid://dmnopf5p36f3o" path="res://Sounds/level1.mp3" id="3_3qant"]
[ext_resource type="AudioStream" uid="uid://co73h3tlt10u5" path="res://Sounds/level2.mp3" id="4_8m4xp"]
[ext_resource type="AudioStream" uid="uid://5d2aktg7bngi" path="res://Sounds/level3.mp3" id="5_vja3a"]

[node name="BackgroundMusic" type="Node2D"]
script = ExtResource("1_pigtt")

[node name="Tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hb7aa")
volume_db = -25.0

[node name="Level1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3qant")
volume_db = -25.0

[node name="Level2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8m4xp")
volume_db = -25.0

[node name="Level3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vja3a")
volume_db = -25.0
